Fixed shift update bug and removed unsaved trips section.

--- a/src/app/shared/components/trips-quick-view/trips-quick-view.component.scss
+++ b/src/app/shared/components/trips-quick-view/trips-quick-view.component.scss
@@ -18,6 +18,7 @@ mat-card-header {
 
 h3 {
     padding-left: .5em;
+    margin: 0;
 }
 
 .primary {
